# human-behaviour-convergence

./: .ci_trigger  .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets-whitelist.yml  APPLY_HARDENING.sh  APPLY_PATCHES.md  APP_STATUS.md  BUG_SUMMARY.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONNECTOR_AUDIT_REPORT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.frontend  ETHICS.md  FINAL_RESOLUTION_SUMMARY.md  GOVERNANCE_RULES.md  HARDENING_SUMMARY.md  HEALTHCHECK.md  INVARIANTS.md  LEVEL_3_HARDENING_COMPLETE.md  LICENSE  LOCAL_VERIFICATION_CHECKLIST.md  Makefile  PATCH_001_REMOVE_HARDENING_ARTIFACTS.patch  PATCH_002_CI_ENHANCED.patch  PATCH_002_ENHANCED_CI_WORKFLOW.patch  PATCH_003_PRE_COMMIT_ENHANCEMENT.patch  PATCH_004_REPRODUCIBLE_BUILD_DOCS.patch  PATCH_REPORT.md  PR_DESCRIPTION.md  README.md  REPO_HEALTH_AUDIT.md  REPO_RESTRUCTURE_AND_CLEANUP_REPORT.md  SECURITY.md  SNAPSHOT-2024-11-03-1900-UTC.md  (+23 more)
.devcontainer/: devcontainer.json
.github/: AUTO_MERGE_SETUP.md  CLEANUP_STATUS.md  CODEOWNERS  FUNDING.yml  HYGIENE_RULES.md  copilot-instructions.md  dependabot.yml  pull_request_template.md  puppeteer.config.cjs
.quarantine/: README.md
app/: README.md  __init__.py  main.py
connectors/: __init__.py  base.py  firms_fires.py  osm_changesets.py  who_disease.py  wiki_pageviews.py
data/: hbc.db
diagram/: behaviour-convergence.mmd
docs/: ACTIVE_ISSUE_AUDIT_AND_FIX_REPORT.md  ADVANCED_VISUALIZATIONS_IMPLEMENTATION.md  AGENT_VERIFICATION_SUITE.md  AI_CODE_REVIEW_GUIDE.md  AUTONOMOUS_EXECUTION_SUMMARY.md  BEHAVIOR_INDEX.md  BEHAVIOR_INDEX_CURRENT.md  BEHAVIOR_INDEX_ENHANCEMENT_SUMMARY.md  BEHAVIOR_INDICATORS_REGISTRY.md  BEHAVIOR_SYSTEM_STATUS_V2.md  BRANCH_PROTECTION.md  BUG_FIX_COMPLETE.md  BUG_FIX_REPORT.md  BUG_HUNT_BUGS.json  BUG_HUNT_FINAL_SUMMARY.md  BUG_HUNT_REPORT.md  BUG_HUNT_SURGICAL_REPORT.md  CI_DOCKER_E2E_STATUS.md  CLEANUP_STATUS.md  CODE_QUALITY_ANALYSIS.md  COMMAND_CENTER_IMPLEMENTATION.md  COMPREHENSIVE_BUG_HUNT_FORENSIC_REPORT.md  COMPREHENSIVE_BUG_HUNT_REPORT.md  COMPREHENSIVE_DASHBOARD_EXPANSION_REPORT.md  CREATIVE_DASHBOARD_EXPANSION.md  DASHBOARD_CERTIFICATION.md  DASHBOARD_DATA_VALIDATION_REPORT.md  DASHBOARD_ENHANCEMENT_SUMMARY.md  DASHBOARD_ERADICATION_FINAL_CERTIFICATION.md  DASHBOARD_ERADICATION_FINAL_REPORT.md  DASHBOARD_ERADICATION_PROTOCOL_COMPLETE.md  DASHBOARD_ERADICATION_REPORT.md  DASHBOARD_VISIBILITY_FINAL_REPORT.md  DASHBOARD_VISIBILITY_VERIFICATION.md  DATASET_EXPANSION_RECOMMENDATIONS.md  DATA_EXPANSION_AUDIT.md  DATA_EXPANSION_PROGRESS.md  DATA_RESURRECTION_STATUS.md  DATA_SOURCES.md  DEEP_BUG_HUNT_FINAL_REPORT.md  (+84 more)
hbc/: __init__.py  cli.py  forecasting.py
notebooks/: demo.ipynb
ops/: README.md  check_integrity.sh  check_logs.sh  collect_support_bundle.sh  dev_watch_docker.sh  k8s_apply_safe.sh  k8s_health_check.sh  run_forecast_regression.py  scan_log_gaps.sh  test_scripts.sh  triage_main.sh  validate_changeset5_fred_runtime.sh  verify_changeset5_gateA.sh  verify_changeset5_gateA_complete.sh  verify_changeset5_gateA_final.sh  verify_changeset6_regions_ui.sh  verify_fred_baseline_live.sh  verify_fred_configured_ui.sh  verify_fred_live_datasource.sh  (+4 more)
(+464 files in other folders)
