[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hbc"
version = "0.1.0"  # Managed by semantic-release
description = "Synthetic, population-scale behavioral forecasting explorer."
readme = "README.md"
license = {text = "Proprietary - All Rights Reserved"}
requires-python = ">=3.10"
authors = [{name = "codethor", email = "codethor0@users.noreply.github.com"}]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pandas>=2.2.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "h3>=3.7.6",
    "structlog>=23.1.0",
    "requests>=2.31.0",
    "pyarrow>=16.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "responses>=0.24.0",
]

[project.scripts]
hbc-cli = "hbc.cli:main"

[project.entry-points."human_behaviour_predictor"]
example = "predictors.example_predictor:ExamplePredictor"

[tool.setuptools.packages.find]
include = ["hbc", "connectors", "predictors"]

[tool.black]
line-length = 88
exclude = '''
/(
    notebooks
  | \.venv
  | \.git
  | node_modules
)/
'''

[tool.ruff]
line-length = 88
exclude = [
    "notebooks",
    ".venv",
    ".git",
    "node_modules",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.semantic_release]
version_variable = ["pyproject.toml:project.version"]
version_toml = ["pyproject.toml", "project.version"]
build_command = "pip install build && python -m build"
dist_path = "dist"
upload_to_vcs_release = true
hvcs = "github"
commit_author = "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
